--- a/helloworld.html
+++ b/helloworld.html
@@ -4,39 +4,39 @@
   
 </head>
 <body>
-    <!-- print helloworld -->
-     <!-- <script>
-         console.log('hello world!')
-     </script> -->
-     <!-- <script>
-         alert('hello world!')
-     </script> -->
-     <!-- <script>
-         document.write('hello world!')
-     </script> -->
+   
 
-
-    
-     <!-- add two variables-->
-     <!-- <script>
-         let a=10;
-         let b=5;
-         let c=a+b;
-         document.write('sum of two numbers:' +c  +"\t"  +c);
-        //  \t is for giving space
-     </script> -->
-
-
-
-
+     <!-- shows 12+3 
      <script>
-         const number=prompt('enter the number:');
-         const result=Math.sqrt(number);
-         console.log('the square root of' +'\t' +number +'\t' +'is' +'\t' +result);
-     </script>
+         console.log("12+3");
+     </script> -->
 
 
 
+     <!-- explanation of let and var -->
+     <!-- <script>
+         let Name="jesus";
+          Name="jeru";
+         document.write("my name is" +'<br>' +Name );
+     </script> -->
+
+<!-- 
+     <script>
+         const Name="jesus";
+         Name="jeru";
+         document.write("my name is" +Name);
+     </script> -->
+
+     <!-- <script>
+         let array=["jesus", 20 , false];
+         document.write (array.length);
+     </script> -->
+
+
+     <!-- <script>
+          let object={ Name:"jesus", fname:"jeru", age:20};
+          document.write( object.Name);
+     </script> -->
 
 
     
