--- a/adding two variables.html
+++ b/adding two variables.html
@@ -4,7 +4,7 @@
   
 </head>
 <body>
-    
+    <h1>adding two variables</h1>
  <!-- another method -->
    <!-- <script>
        let num1=prompt("enter a number");
