--- a/celsius to fahrenheit.html
+++ b/celsius to fahrenheit.html
@@ -4,6 +4,7 @@
    
 </head>
 <body>
+    <h1>convert celsius to fahrenheit</h1>
     <!-- convert celsius to fahrenheit -->
     <script>
         let a=prompt('enter a number:');
