--- a/even or odd.html
+++ b/even or odd.html
@@ -4,6 +4,7 @@
     
 </head>
 <body>
+    <h1>even or odd</h1>
     <script>
         // const num = prompt("enter a number: ");
         // if (num % 2 == 0){
