--- a/randomnumber.html
+++ b/randomnumber.html
@@ -4,6 +4,7 @@
    
 </head>
 <body>
+    <h1>finding a random number</h1>
     <!-- generate a random number between 0 and 1 -->
     <!-- <script>
          const result=Math.random();
