--- a/square root.html
+++ b/square root.html
@@ -4,6 +4,7 @@
     
 </head>
 <body>
+    <h1>finding square root</h1>
     <!-- finding square root of a number -->
     <script>
         const number=prompt('enter the number:');
