--- a/swap two variables.html
+++ b/swap two variables.html
@@ -4,6 +4,7 @@
     
 </head>
 <body>
+     <h1>swap two variables</h1>
       <!-- to swap two variables -->
       <script>
         let a=prompt('enter a number:');
