--- a/factorial of a number.html
+++ b/factorial of a number.html
@@ -5,7 +5,13 @@
 </head>
 <body>
     <script>
-        
+       let num=prompt('enter a number');
+       let a=1;
+       for (let b=1;b<=num;b++){
+            a*=b;
+         
+        } 
+        document.write(a);
     </script>
 </body>
 </html>
