--- a/prime number.html
+++ b/prime number.html
@@ -5,21 +5,56 @@
 </head>
 <body>
     <script>
-     let a = parseInt(prompt('enter a value'));
-     if(a === 1){
-         document.write(1 +"is neither a prime number nor a composite number");
-     }
+    //  let a = parseInt(prompt('enter a value'));
+    //  if(a === 1){
+    //      document.write(1 +"is neither a prime number nor a composite number");
+    //  }
     
-     for(let i = 2; i<a; i++){
-         if (a % i === 0){
-             document.write(a  +"is a composite number");
-             break;
-         }
-         else{
-             document.write(a  +"is a prime number");
-             break;
-         }
-     }
+    //  for(let i = 2; i<a; i++){
+    //      if (a % i === 0){
+    //          document.write(a  +"is a composite number");
+    //          break;
+    //      }
+    //      else{
+    //          document.write(a  +"is a prime number");
+    //          break;
+    //      }
+    //  }
+
+
+
+     // take input from the user
+           let number = parseInt(prompt("Enter a positive number: "));
+           let isPrime = true;
+
+     // check if number is equal to 1
+            if (number === 1) {
+                  console.log("1 is neither prime nor composite number.");
+            }
+
+     // check if number is greater than 1
+            else if (number > 1) {
+
+     // looping through 2 to number-1
+            for (let i = 2; i < number; i++) {
+            if (number % i == 0) {
+                 isPrime = false;
+                 break;
+            }
+           }
+
+            if (isPrime) {
+                console.log(`${number} is a prime number`);
+            } 
+            else {
+                console.log(`${number} is a not prime number`);
+            }
+           }
+
+     // check if number is less than 1
+           else {
+              console.log("The number is not a prime number.");
+           } 
         
     </script>
 </body>
