--- a/arrayquestions/7. merge and remove duplicate.html
+++ b/arrayquestions/7. merge and remove duplicate.html
@@ -9,18 +9,19 @@
 <body>
     <script>
         let a=[1,2,3,4,5,"jeru",];
-        document.write("array a:" +'\t' +a);
-        document.write('<br>');
+        // document.write("array a:" +'\t' +a);
+        // document.write('<br>');
         let b=["jeru","sess",3,4,];
-        document.write("arrray b:" +'\t' +b);
-        document.write('<br>');
-        let mergedarray=a.concat(b);
-        document.write("merged array:" +'\t' +mergedarray);
-        document.write('<br>');
-        let correctedarray=[...new Set(mergedarray)];
-        document.write("correct array:" +'\t' +correctedarray);
-        document.write('<br>');
-
+        // document.write("arrray b:" +'\t' +b);
+        // document.write('<br>');
+        // let mergedarray=a.concat(b);
+        a.concat(b);
+        // document.write("merged array:" +'\t' +mergedarray);
+        // document.write('<br>');
+        // let correctedarray=[...new Set(mergedarray)];
+        // document.write("correct array:" +'\t' +correctedarray);
+        // document.write('<br>');
+        document.write(a);
 
     </script>
 </body>
