--- a/arrayquestions/9.twodimensionalarray.html
+++ b/arrayquestions/9.twodimensionalarray.html
@@ -6,18 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+ <body>
     <script>
-        let darray=[];
+    //    const rows=2;
+    //    const col=3;
+    //    const myArray=[];
+    //    for (let i=0;i<rows;i++){
+    //        myArray[i]=[];
+    //        for(let i=0;i<col;i++){
+    //            myArray[i][j]= null ;
+    //        }
+    //        document.write(myArray);
+    //    }
+   
 
-        darray.push([1,2,3]);
-        darray.push(["j","e","r","u"]);
-        darray.push([true,false]);
 
-        document.write(darray);
 
-        let a=[["one"], [1,2,3], ["day1","day2","day3"]];
-        document.write(a);
+                     
+
     </script>
 </body>
 </html>
