--- a/arrayquestions/2.check characters .html
+++ b/arrayquestions/2.check characters .html
@@ -10,31 +10,31 @@
 
 <body>
     <script>
-        // let array = ["red", 4, true];
+        let array = ["red", 4, true];
 
-        // let output1 = array.includes("red");
-        // document.write(output1);
-        // document.write('<br>');//true
+        let output1 = array.includes("red");
+        document.write(output1);
+        document.write('<br>');//true
 
-        // let output2 = array.includes(5);
-        // document.write(output2);
-        // document.write('<br>');//false
+        let output2 = array.includes(5);
+        document.write(output2);
+        document.write('<br>');//false
 
-        // let output3 = array.includes(true);
-        // document.write(output3);
-        // document.write('<br>');//true
+        let output3 = array.includes(true);
+        document.write(output3);
+        document.write('<br>');//true
 
         // // program to check if an array contains a specified value
 
-        let hasValue = array.includes('red');
+        // let hasValue = array.includes('red');
 
-        // check the condition
-        if (hasValue) {
-            console.log('Array contains the value.');
-        }
-        else {
-            console.log('Array does not contain the value.');
-        }
+        // // check the condition
+        // if (hasValue) {
+        //     console.log('Array contains the value.');
+        // }
+        // else {
+        //     console.log('Array does not contain the value.');
+        // }
 
 
        
