--- a/arrayquestions/arrayofobjects.html
+++ b/arrayquestions/arrayofobjects.html
@@ -8,41 +8,20 @@
 </head>
 <body>
     <script>
-        //Array Of Objects
-        // let array=[
-        //     {id:1, name:"jeru", food:"maggi"},
-        //     {id:2, name:"sess", food:"pasta"},
-        //     {id:3, name:"ruby", food:"rice"}
-        // ]
-        // document.write(array[1].food);//output=pasta
-        // document.write('<br>');
+       console.log("jeru");
+       let array=[
+           {id:1, name:"jeru"},
+           {id:2, name:"sess"},
+           {id:3, name:"ruby"}
+       ]
+       document.write(array[1].id);
 
-
-        // let a=array[0];
-        // let output=a.id;
-        // document.write(output);//output=1
-        // document.write('<br>');
-
-        // //Objects Of Array
-        // let object={
-        //    array1:[1,2,3,4],
-        //    array2:["jeru","sess","ruby"],
-        //    array3:[true,false]
-        // }
-
-        // document.write(object.array2[1])//sess
-        // document.write('<br>');
-
-        // let a=object;
-        // let output=a.array2[0];
-        // document.write(output);//jeru
-
-
-        //two dimensional array
-        let darray=[
-            [1,2,3],["j","e","r","u"],[{age="26",name="jeru"}]
-        ]//arrays inside an array
-
+       let object={
+           array1:[1,2,3],
+           array2:["jeru","sess"],
+           array3:[true,false]
+       }
+       document.write(object.array2[1]);
 
 
     </script>
