--- a/arrayquestions/11.compare elements.html
+++ b/arrayquestions/11.compare elements.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <script>
-        let a=[1,2,3,4,5];
+        let a=[1,2,3,4,5];//"1","2"
         let b=["jeru","sess","ruby",1];
 
-        let compare=JSON.stringify(a) == JSON.stringify(b);
+        let compare=JSON.stringify(a) == JSON.stringify(b);//checks the value inside 
         document.write(compare);
     </script>
 </body>
