--- a/arrayquestions/2.check characters .html
+++ b/arrayquestions/2.check characters .html
@@ -35,6 +35,9 @@
         // else {
         //     console.log('Array does not contain the value.');
         // }
+        let a="red".toUpperCase()
+        let ouput4= array.includes(a);
+        document.write(output4);
 
 
        
