--- a/arrayquestions/arrayofobjects.html
+++ b/arrayquestions/arrayofobjects.html
@@ -9,13 +9,14 @@
 <body>
     <script>
        console.log("jeru");
+       //objectofarray
        let array=[
            {id:1, name:"jeru"},
            {id:2, name:"sess"},
            {id:3, name:"ruby"}
        ]
        document.write(array[1].id);
-
+        //arrayofobject
        let object={
            array1:[1,2,3],
            array2:["jeru","sess"],
