--- a/arrayquestions/9.twodimensionalarray.html
+++ b/arrayquestions/9.twodimensionalarray.html
@@ -18,12 +18,8 @@
     //        }
     //        document.write(myArray);
     //    }
-   
-
-
-
-                     
-
-    </script>
+      let array=[[1,2,3],[4,5,6],[7,8,9]];
+      document.write(array);
+ </script>
 </body>
 </html>
