--- a/arrayquestions/finding index.html
+++ b/arrayquestions/finding index.html
@@ -8,12 +8,10 @@
 </head>
 <body>
     <script>
-        let a=[1,2,3,4,5,6,7,8,9];
-        document.write(a);
-        document.write('<br>');
-        let c=a.slice(0,5);//(index no, no.of the element.length)
-        let d=a.slice(5,9);
-        document.write(c +'\t' +"and" +'\t' +d);
+        let array=[1,2,3,4,5,1,2,3,4,5,1,2,3,4,5];
+        let index=array.indexOf(3);//takes the value of the 1st 3.
+         document.write(index);
+
     </script>
 </body>
 </html>
