--- a/randomnumber.html
+++ b/randomnumber.html
@@ -15,7 +15,7 @@
 
    <!-- generate a random number between 0 and 9 -->
    <!-- <script>
-       const result=Math.floor(Math.random()*10);
+        <!-- const result=Math.floor(Math.random()*10); -->
        document.write('random no. ' +'\t'  +'\t' +'is' +'\t' +result);
        document.write('<br>');
    </script> -->
